--- a/.github/workflows/Build_OP_K3.yml
+++ b/.github/workflows/Build_OP_K3.yml
@@ -11,9 +11,9 @@ on:
   release:
     types: [published]
 
-  #push:
-  #  branches: 
-  #    - master
+  push:
+    branches: 
+      - master
 
   #schedule:
   #  - cron: 0 8 * * 5
@@ -65,7 +65,16 @@ jobs:
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         cd openwrt
         sed -i '5s/#//' feeds.conf.default
-        
+   
+   
+    - name: 自定义插件
+      run: |
+        cd package
+        mkdir openwrt-packages
+        cd openwrt-packages
+        git clone https://github.com/ksatera/luci-app-passwall.git
+   
+   
     - name: Update & Install feeds
       working-directory: ./openwrt
       run: |
