--- a/.github/workflows/Build_OP_K3.yml
+++ b/.github/workflows/Build_OP_K3.yml
@@ -60,7 +60,7 @@ jobs:
     - name: Clone source code
       env: 
         REPO_URL: https://github.com/ksatera/openwrt
-        REPO_BRANCH: master
+        REPO_BRANCH: dev-19.07
       run: |
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         cd openwrt
